<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/pending_member_background"
    android:fillViewport="true"
    tools:context=".groups.ui.managegroup.ManageGroupFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/groupTitleCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="?android:attr/windowBackground"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="16dp">

                <org.thoughtcrime.securesms.components.AvatarImageView
                    android:id="@+id/group_avatar"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:id="@+id/group_title"
                    style="@style/TextAppearance.Signal.Title2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="14dp"
                    tools:text="Parkdale Run Crew" />

                <TextView
                    android:id="@+id/member_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textSize="14sp"
                    tools:text="12 members (4 invited)" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/group_disappearing_messages_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardBackgroundColor="?android:attr/windowBackground"
            app:layout_constraintTop_toBottomOf="@id/groupTitleCard">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    style="@style/GroupTextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/ManageGroupActivity_disappearing_messages" />

                <Button
                    android:id="@+id/disappearing_messages"
                    style="@style/GroupTextButton.UltramarineUI"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    tools:text="Off" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/groupNotificationsCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:visibility="gone"
            app:cardBackgroundColor="?android:attr/windowBackground"
            app:layout_constraintTop_toBottomOf="@id/group_disappearing_messages_card"
            tools:visibility="visible">

            <View
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="TODO: GROUP NOTIFICATIONS" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/group_media_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:visibility="gone"
            app:cardBackgroundColor="?android:attr/windowBackground"
            app:layout_constraintTop_toBottomOf="@id/groupNotificationsCard"
            tools:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/rail_label"
                    style="@style/GroupTextButton.UltramarineUI"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="true"
                    android:padding="16dp"
                    android:text="@string/recipient_preference_activity__shared_media" />

                <org.thoughtcrime.securesms.components.ThreadPhotoRailView
                    android:id="@+id/recent_photos"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_marginBottom="16dp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/group_attributes_access_control_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:visibility="gone"
            app:cardBackgroundColor="?android:attr/windowBackground"
            app:layout_constraintTop_toBottomOf="@id/group_media_card"
            tools:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/edit_group_access_title"
                    style="@style/GroupTextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ManageGroupActivity_who_can_edit_group_info" />

                <Button
                    android:id="@+id/edit_group_access_value"
                    style="@style/GroupTextButton.UltramarineUI"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    tools:text="All members" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/groupMembershipCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardBackgroundColor="?android:attr/windowBackground"
            app:layout_constraintTop_toBottomOf="@id/group_attributes_access_control_card">

            <org.thoughtcrime.securesms.groups.ui.GroupMemberListView
                android:id="@+id/group_members"
                android:layout_width="match_parent"
                android:layout_height="100dp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/groupPendingCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardBackgroundColor="?android:attr/windowBackground"
            app:layout_constraintTop_toBottomOf="@id/groupMembershipCard">

            <Button
                android:id="@+id/listPending"
                style="@style/GroupTextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ManageGroupActivity_pending_group_invites" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/groupBlockAndLeaveCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardBackgroundColor="?android:attr/windowBackground"
            app:layout_constraintTop_toBottomOf="@id/groupPendingCard">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/blockGroup"
                    style="@style/GroupTextButton.Red"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ManageGroupActivity_block_group" />

                <Button
                    android:id="@+id/leaveGroup"
                    style="@style/GroupTextButton.Red"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ManageGroupActivity_leave_group" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>